--- a/floats.tex
+++ b/floats.tex
@@ -85,7 +85,7 @@
       \centering
       \includegraphics[width=0.8\linewidth]{figures/pdf/progress_perf-graph-crop.pdf}
       \caption{Speedup.}
-      \label{fig:progress:speedup}
+      \label{fig:progress:perf}
     \end{subfigure}
 
     \caption{Energy savings and speedup v. MSP430 for neural network inference. \riptide saves $1676\times$ energy and is $235\times$ faster v. the MSP430.}
