added efficiency graph

--- a/floats.tex
+++ b/floats.tex
@@ -74,21 +74,28 @@
   \begin{figure}[htb]
     \centering
 
-    \begin{subfigure}{0.49\linewidth}
+    \begin{subfigure}{0.32\linewidth}
       \centering
-      \includegraphics[width=0.8\linewidth]{figures/pdf/progress_energy-graph-crop.pdf}
+      \includegraphics[width=0.9\linewidth]{figures/pdf/progress_energy-graph-crop.pdf}
       \caption{Energy savings.}
       \label{fig:progress:energy}
     \end{subfigure}
     \hfill
-    \begin{subfigure}{0.49\linewidth}
+    \begin{subfigure}{0.32\linewidth}
       \centering
-      \includegraphics[width=0.8\linewidth]{figures/pdf/progress_perf-graph-crop.pdf}
+      \includegraphics[width=0.9\linewidth]{figures/pdf/progress_eff-graph-crop.pdf}
+      \caption{Efficiency.}
+      \label{fig:progress:eff}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.32\linewidth}
+      \centering
+      \includegraphics[width=0.9\linewidth]{figures/pdf/progress_perf-graph-crop.pdf}
       \caption{Speedup.}
       \label{fig:progress:perf}
     \end{subfigure}
 
-    \caption{Energy savings and speedup v. MSP430 for neural network inference. \riptide saves $1676\times$ energy and is $235\times$ faster v. the MSP430.}
+    \caption{Energy savings, efficiency, and speedup v. MSP430 for neural network inference. \riptide saves $1676\times$ energy and is $235\times$ faster v. the MSP430.}
     \label{fig:progress}
   \end{figure}
 }
