--- a/7_future.tex
+++ b/7_future.tex
@@ -20,9 +20,13 @@ For our scalar design and \riptide, we implement each using a high-threshold vol
 % 
 Even adjusting for process technology, \riptide saves $\approx 283 \times$ energy v. MSP430, suggesting that a signficant portion of energy savings comes from the architecture and not from process technology scaling.
 % 
-\autoref{fig:progress:perf} shows a similar trend in speedup: our scalar design is $11.7\times$ faster than the MSP430 and \riptide is $234.8\times$ faster.
+\autoref{fig:progress:eff} and \autoref{fig:progress:perf} show similar trends in efficiency and speedup.
 % 
-Together the energy savings and speedup of \riptide v. MSP430 and v. our scalar design represent significant progress and make \riptide an ideal platform for new applications in the ULP domain.
+\riptide achieves $64MOPS/mW$, $17.3\times$ greater than our scalar design, and 
+is $234.8\times$ faster than the MSP430.
+% Our scalar design is $11.7\times$ faster than the MSP430 and \riptide is $234.8\times$ faster.
+% 
+Together the energy savings, efficiency, and speedup of \riptide v. MSP430 and v. our scalar design represent significant progress and make \riptide an ideal platform for new applications in the ULP domain.
 
 \figFutureModel
 \subsection{Is compute energy-efficiency still a bottleneck?}
