small edits to thesis + defense slides

--- a/abstract.tex
+++ b/abstract.tex
@@ -20,7 +20,7 @@ Specifically it contributes 1) \sonic, a software framework that enables machine
 % 
 \snafu extended \manic's vector-dataflow to further reduce energy by minimizing the toggling of shared pipeline resources.
 % 
-Its generated CGRAs implement spatial-vector-dataflow execution that spatially lays out computation across a fabric of PEs, keeping each PE configured in the same way throughout kernel execution.
+Its generated CGRAs implement spatial-vector-dataflow execution that lays out computation across a fabric of PEs, keeping each PE configured in the same way throughout kernel execution.
 % 
 Finally, \riptide improves overall system efficiency by compiling and offloading to its CGRA, programs written in C with complex control-flow and irregular memory accesses. 
 % 
