--- a/refs.bib
+++ b/refs.bib
@@ -10517,3 +10517,5 @@ series = {ASPLOS '17}
   year={1993},
   publisher={World Scientific}
 }
+
+ @misc{stm32l1, title={STM32L152RE}, url={https://www.st.com/en/microcontrollers-microprocessors/stm32l152re.html}, journal={STMicroelectronics}} 
