--- a/7_future.tex
+++ b/7_future.tex
@@ -10,20 +10,20 @@ This chapter will discuss future work on improving area efficiency, performance,
 \section{Quantifying the progress made}
 \autoref{fig:progress} quantifies the significant progress that this thesis has made towards a new ULP, energy-minimal sensor system stack.
 %
-We compare an MSP430, Cortex-M3, and our scalar design to \riptide running neural network inference (network is a derivative of Lenet~\cite{lecun:ieee89:lenet}).
+We compare an MSP430, Cortex-M3 (STM32L15RE~\cite{stm32l1}), and our scalar design to \riptide running neural network inference (network is a derivative of Lenet~\cite{lecun:ieee89:lenet}).
 % 
 For the MSP430 and the Cortex-M3, we run the network the on-device to measure latency and estimate power using the corresponding datasheet. 
 % 
 For our scalar design and \riptide, we implement each using a high-threshold voltage, industrial-grade process and use a post-synthesis annotated switching model to estimate power (same methodology as in~\autoref{riptide:method}).
 % 
-\autoref{fig:progress:energy} shows energy savings: our scalar design is already an aggressive baseline, saving $98\times$ energy v. MSP430 and Cortex-M3; \riptide improves even further, saving a massive $1676\times$.
+\autoref{fig:progress:energy} shows energy savings: our scalar design is already an aggressive baseline, saving $292\times$ energy v. MSP430 and Cortex-M3; \riptide improves even further, saving a massive $1913\times$.
 % 
-Even adjusting for process technology, \riptide saves $\approx 283 \times$ energy v. MSP430, suggesting that a signficant portion of energy savings comes from the architecture and not from process technology scaling.
+Even adjusting for process technology, \riptide saves $\approx 323 \times$ energy v. MSP430, suggesting that a signficant portion of energy savings comes from the architecture and not from process technology scaling.
 % 
 \autoref{fig:progress:eff} and \autoref{fig:progress:perf} show similar trends in efficiency and speedup.
 % 
-\riptide achieves $64MOPS/mW$, $17.3\times$ greater than our scalar design, and 
-is $234.8\times$ faster than the MSP430.
+\riptide achieves $64MOPS/mW$, $6.7\times$ greater than our scalar design, and 
+is $146\times$ faster than the MSP430.
 % Our scalar design is $11.7\times$ faster than the MSP430 and \riptide is $234.8\times$ faster.
 % 
 Together the energy savings, efficiency, and speedup of \riptide v. MSP430, Cortex-M3, and our scalar design represent significant progress and make \riptide an ideal platform for new applications in the ULP domain.
